# stm32_cmake_base

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakePresets_old.json  ReadMe.md  STM32F429ZITX_FLASH.ld  STM32F446RETX.ld  base-setup.cmake  base_setup.cmake  readme.md
Startup/: startup.c  vector.c
cmake/: cmsis-download.cmake  functions.cmake  gcc-arm-none-eabi.cmake  set-cpu-params.cmake  set_cpu_params.cmake  stm32-parse-device.cmake
cmsis-core/download_files/linker/: linker-simple.ld.in
inc/: main.hpp
src/: main.cpp
